[package]
name = "rust_lab"
version = "0.1.0"
authors = ["qalisander <qalisander@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
trace = "0.1.6"
log = "0.4.14"
env_logger = "0.9.0"
bit-set = "0.5.2"

[dev-dependencies]
test-case = "1.2.0"
rstest = "0.11.0"
parameterized = "0.3.1"
#bencher = "0.1.4"